# psych755-jjb

./: .env.example  .gitignore  Getstarted.md  README.md  _quarto.yml  index.qmd  pyproject.toml  references.bib  requirements.txt  styles.scss
config/: default.yaml
data/: README.md
data/excerpts/: README.md
docs/: framework.md  framework.qmd
memos/: README.md
notebooks/: README.md  factor_feature_importance.ipynb  ml_vs_llm_comparison.ipynb  stage_one_ml_baseline.ipynb
prompts/: system_prompt.md
scripts/: build_personas.py  run_pipeline.py  run_vllm.sh  run_vllm_monitor.sh  score_ground_truth.py
src/ca_personas/: __init__.py  cli.py  compare_agents.py  evaluate.py  feature_importance.py  ground_truth.py  load.py  ml_baseline.py  personas.py  pipeline.py  predict.py  scoring.py
src/ca_personas/llm/: __init__.py  base.py  mock.py  ollama.py  openrouter.py
src/inference/: README.md  __init__.py  ca_prompts.py  export_prompts.py  ingest_results.py  predict_vllm.py  utils.py
tests/: test_compare_agents.py  test_evaluate_bands.py  test_feature_importance.py  test_ground_truth_and_full_personas.py  test_inference_ca_prompts.py  test_inference_utils.py  test_load_and_personas.py  test_ml_baseline.py  test_pipeline_mock.py  test_scoring.py
