[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ca-personas"
version = "0.1.0"
description = "Tiered persona prompts and LLM prediction of communication apprehension (PRCA)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2",
  "numpy>=1.26",
  "requests>=2.31",
  "python-dotenv>=1.0",
  "pyyaml>=6.0",
  "matplotlib>=3.8",
  "scikit-learn>=1.4",
  "jupyter>=1.0",
  "nbclient>=0.10",
  "nbformat>=5.10",
  "ipykernel>=6.29",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
vllm = [
  "vllm>=0.6",
  "transformers>=4.44",
  "tqdm>=4.66",
  "huggingface_hub>=0.24",
]

[project.scripts]
ca-personas = "ca_personas.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
